# QRcode_scanner

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  globalshortcut.cpp  globalshortcut.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrcodedialog.cpp  qrcodedialog.h  qrcodedialog.ui  resources.qrc  screenshot.cpp  screenshot.h  trayicon.cpp  trayicon.h  vcpkg.json
